<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:persistent="false" android:summary="@string/pref_data_sync_description">
    </Preference>

    <EditTextPreference android:key="PREF_SERVER_URL"
        android:title="@string/pref_url_title"
        android:summary="@string/pref_url_summary" />
    <SwitchPreference android:key="PREF_SERVER_DO_AUTH"
        android:title="@string/pref_basic_auth_title"
        android:summary="@string/pref_basic_auth_summary"/>
    <EditTextPreference android:key="PREF_SERVER_USERNAME"
        android:dependency="PREF_SERVER_DO_AUTH"
        android:title="@string/pref_username_title"
        android:summary="@string/pref_username_summary"/>
    <EditTextPreference android:key="PREF_SERVER_PASSWORD"
        android:dependency="PREF_SERVER_DO_AUTH"
        android:password="true"
        android:title="@string/pref_password_title" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
        <!--android:defaultValue="180"-->
        <!--android:entries="@array/pref_sync_frequency_titles"-->
        <!--android:entryValues="@array/pref_sync_frequency_values"-->
        <!--android:key="sync_frequency"-->
        <!--android:negativeButtonText="@null"-->
        <!--android:positiveButtonText="@null"-->
        <!--android:title="@string/pref_title_sync_frequency" />-->

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <Preference android:title="@string/connection_test_action_label">
        <intent android:action="net.droegemueller.av4ms.activities.ConnectionTestActivity"/>
    </Preference>

</PreferenceScreen>
