<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference android:key="pref_url"
        android:title="@string/pref_url_title"
        android:summary="@string/pref_url_summary"
        android:defaultValue="https://..."/>
    <EditTextPreference android:key="pref_username"
        android:title="@string/pref_username_title"
        android:summary="@string/pref_username_summary"
        android:defaultValue=""/>
    <EditTextPreference android:key="pref_password"
        android:password="true"
        android:title="@string/pref_password_title"
        android:defaultValue=""/>
    <!--<CheckBoxPreference-->
        <!--android:key="pref_sync"-->
        <!--android:title="@string/pref_sync"-->
        <!--android:summary="@string/pref_sync_summ"-->
        <!--android:defaultValue="true" />-->
    <!--<ListPreference-->
        <!--android:dependency="pref_sync"-->
        <!--android:key="pref_syncConnectionType"-->
        <!--android:title="@string/pref_syncConnectionType"-->
        <!--android:dialogTitle="@string/pref_syncConnectionType"-->
        <!--android:entries="@array/pref_syncConnectionTypes_entries"-->
        <!--android:entryValues="@array/pref_syncConnectionTypes_values"-->
        <!--android:defaultValue="@string/pref_syncConnectionTypes_default" />-->
</PreferenceScreen>