<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="net.droegemueller.av4ms.activities.ConnectionTestActivity"
    tools:showIn="@layout/activity_connection_test">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <Button
            android:id="@+id/connection_test_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_test_button_text" />

        <TextView
            android:id="@+id/connection_test_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connection_test_textarea_default" />

        <TextView
            android:id="@+id/connection_test_text_basic_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
        <TextView
            android:id="@+id/connection_test_text_extension_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
        <TextView
            android:id="@+id/connection_test_text_manual_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />
        <Button
            android:visibility="invisible"
            android:id="@+id/connection_test_button_goto_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connection_test_button_goto_settings_text" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
